--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,9 +55,17 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+      
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
 
       - name: Update kube config
-        run: aws eks update-kubeconfig --name simple-bank --region eu-west-1
+        run: aws eks update-kubeconfig --name simple-bank --region us-east-1
 
       - name: Deploy image to Amazon EKS
         run: |
