added nodegroup content

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,22 +67,18 @@ jobs:
           aws eks create-cluster --name simple-bank \
                 --role-arn arn:aws:iam::042418029664:role/eksClusterRole \
                 --resources-vpc-config subnetIds=subnet-009fb3d24d9b1cf38,subnet-0c608ad906dabe5c3,securityGroupIds=sg-0e860bf67b9e631a6 \
-                sleep 1200
-      - name: Creating node group
-        run: |
           aws eks create-nodegroup --cluster-name simple-bank \
                 --nodegroup-name simple-bank-node-node-group
                 --scaling-config 2 \
                 #	--subnets subnet-009fb3d24d9b1cf38 subnet-0c608ad906dabe5c3 \
                 #--instance-types t2.micro 
-                sleep 1200
 
-      - name: Update kube config
-        run: aws eks update-kubeconfig --name simple-bank --region us-east-1
+                #      - name: Update kube config
+                #run: aws eks update-kubeconfig --name simple-bank --region us-east-1
 
-      - name: Deploy image to Amazon EKS
-        run: |
-          kubectl apply -f eks/aws-auth.yaml
-          kubectl apply -f eks/deployment.yaml
-          kubectl apply -f eks/service.yaml
-          kubectl apply -f eks/ingress.yaml
+                #     - name: Deploy image to Amazon EKS
+                #run: |
+                #kubectl apply -f eks/aws-auth.yaml
+                #kubectl apply -f eks/deployment.yaml
+                #kubectl apply -f eks/service.yaml
+                #kubectl apply -f eks/ingress.yaml
