--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,10 +68,11 @@ jobs:
                 --role-arn arn:aws:iam::042418029664:role/eksClusterRole \
                 --resources-vpc-config subnetIds=subnet-009fb3d24d9b1cf38,subnet-0c608ad906dabe5c3,securityGroupIds=sg-0e860bf67b9e631a6 
           aws eks create-nodegroup --cluster-name simple-bank \
-                --nodegroup-name simple-bank-node-node-group
-                --scaling-config 2 
-                #	--subnets subnet-009fb3d24d9b1cf38 subnet-0c608ad906dabe5c3 \
-                #--instance-types t2.micro 
+			--nodegroup-name simple-bank-node-group \
+			--scaling-config 2 \
+			--subnets "subnet-009fb3d24d9b1cf38" "subnet-0c608ad906dabe5c3" --instance-types "t2.micro" --ami-type "AL2_x86_64" --remote-access "ssh" ec2SshKey "kubernetes" \
+			--node-role arn:aws:iam::042418029664:instance-profile/AmazonEKSNodeRole
+
 
                 #      - name: Update kube config
                 #run: aws eks update-kubeconfig --name simple-bank --region us-east-1
