--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -67,11 +67,10 @@ jobs:
           aws eks create-cluster --name simple-bank \
                 --role-arn arn:aws:iam::042418029664:role/eksClusterRole \
                 --resources-vpc-config subnetIds=subnet-009fb3d24d9b1cf38,subnet-0c608ad906dabe5c3,securityGroupIds=sg-0e860bf67b9e631a6 
-     
       - name: Creating kubernetes nodegroup
         run: |
-          aws eks create-nodegroup --cluster-name simple-bank \
-		--nodegroup-name simple-bank-node-group \
+          aws eks create-nodegroup --nodegroup-name simple-bank-node-group \ 
+                --cluster-name simple-bank \
 		--scaling-config 2 \
 		--subnets "subnet-009fb3d24d9b1cf38" "subnet-0c608ad906dabe5c3" --instance-types "t2.micro" --ami-type "AL2_x86_64" --remote-access "ssh" ec2SshKey "kubernetes" \
 		--node-role arn:aws:iam::042418029664:instance-profile/AmazonEKSNodeRole
