--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
                 --cluster-name simple-bank \
                 --scaling-config minSize=2,maxSize=2,desiredSize=2 \
                 --subnets "subnet-009fb3d24d9b1cf38" "subnet-0c608ad906dabe5c3" --instance-types "t2.micro" --ami-type "AL2_x86_64"  \
-                --node-role arn:aws:iam::042418029664:instance-profile/AmazonEKSNodeRole
+                --node-role arn:aws:iam::042418029664:role/AmazonEKSNodeRole
 
 #      - name: Update kube config
 #        run: aws eks update-kubeconfig --name simple-bank --region us-east-1
