--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,14 +68,14 @@ jobs:
           #    --role-arn arn:aws:iam::042418029664:role/eksClusterRole \
           #     --resources-vpc-config subnetIds=subnet-009fb3d24d9b1cf38,subnet-0c608ad906dabe5c3,securityGroupIds=sg-0e860bf67b9e631a6;
           #sleep 1200
-      - name: Creating node group
-        run: |
-          aws eks create-nodegroup --nodegroup-name simple-bank-node \
-              --cluster-name simple-bank \
-              --scaling-config minSize=2,maxSize=2,desiredSize=2 \
-              --subnets "subnet-009fb3d24d9b1cf38" "subnet-0c608ad906dabe5c3" --instance-types "t2.micro" --ami-type "AL2_x86_64"  \
-              --node-role arn:aws:iam::042418029664:role/AmazonEKSNodeRole --tags Name=kube-system;
-          sleep 120
+          # - name: Creating node group
+          #run: |
+          #aws eks create-nodegroup --nodegroup-name simple-bank-node \
+          #   --cluster-name simple-bank \
+          #   --scaling-config minSize=2,maxSize=2,desiredSize=2 \
+          #   --subnets "subnet-009fb3d24d9b1cf38" "subnet-0c608ad906dabe5c3" --instance-types "t2.micro" --ami-type "AL2_x86_64"  \
+          #    --node-role arn:aws:iam::042418029664:role/AmazonEKSNodeRole --tags Name=kube-system;
+          #sleep 120
       - name: Update kube config
         run: aws eks update-kubeconfig --name simple-bank --region us-east-1
       
