--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -1,30 +1,18 @@
 apiVersion: networking.k8s.io/v1
-kind: IngressClass
-metadata:
-  name: nginx
-spec:
-  controller: k8s.io/ingress-nginx
----
-apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: simple-bank-ingress
-  annotations:
-    cert-manager.io/cluster-issuer: letsencrypt
+     name: app-ingress
+     annotations:
+          ngnix.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx
-  rules:
-  - host: "api.simple-bank.org"
-    http:
-      paths:
-      - pathType: Prefix
-        path: "/"
-        backend:
-          service:
-            name: simple-bank-api-service
-            port:
-              number: 80
-  tls:
-  - hosts:
-    - api.simple-bank.org
-    secretName: simple-bank-api-cert
+    ingressClassName: ngnix
+    rules:
+    - http:
+        paths:
+        - path: /home
+          pathType: Exact
+          backend:
+            service:
+              name: simple-bank-api-service
+              port:
+                number: 80
