--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -7,9 +7,9 @@ metadata:
 spec:
     ingressClassName: ngnix
     rules:
-    - http:
+    - nginx:
         paths:
-        - path: /var/www/html
+        - path: /var/www/html/index.html
           pathType: Exact
           backend:
             service:
