--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -1,18 +1,30 @@
 apiVersion: networking.k8s.io/v1
+kind: IngressClass
+metadata:
+  name: nginx
+spec:
+  controller: k8s.io/ingress-nginx
+---
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-     name: app-ingress
-     annotations:
-          ngnix.ingress.kubernetes.io/rewrite-target: /
+  name: simple-bank-ingress
+  #annotations:
+  # cert-manager.io/cluster-issuer: letsencrypt
 spec:
-    ingressClassName: ngnix
-    rules:
-    - http:
-        paths:
-        - path: /
-          pathType: Exact
-          backend:
-            service:
-              name: simple-bank-api-service
-              port:
-                number: 80
+  ingressClassName: nginx
+  rules:
+  - host: "api.simple-bank.org"
+    http:
+      paths:
+      - pathType: Prefix
+        path: "/"
+        backend:
+          service:
+            name: simple-bank-api-service
+            port:
+              number: 80
+              #tls:
+              #- hosts:
+              #- api.simple-bank.org
+              #secretName: simple-bank-api-cert
