--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -14,7 +14,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: "api.simple-bank.org"
+  - host: first.bar.com
     http:
       paths:
       - pathType: Prefix
