--- a/eks/ingress.yaml
+++ b/eks/ingress.yaml
@@ -9,12 +9,12 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: simple-bank-ingress
-  #annotations:
-  # cert-manager.io/cluster-issuer: letsencrypt
+  annotations:
+    cert-manager.io/cluster-issuer: letsencrypt
 spec:
   ingressClassName: nginx
   rules:
-  - host: first.bar.com
+  - host: "api.simple-bank.org"
     http:
       paths:
       - pathType: Prefix
@@ -24,7 +24,7 @@ spec:
             name: simple-bank-api-service
             port:
               number: 80
-              #tls:
-              #- hosts:
-              #- api.simple-bank.org
-              #secretName: simple-bank-api-cert
+  tls:
+  - hosts:
+    - api.simple-bank.org
+    secretName: simple-bank-api-cert
