--- a/eks/deployment.yaml
+++ b/eks/deployment.yaml
@@ -20,7 +20,7 @@ spec:
     spec:
       containers:
       - name: nginx-container
-        image: ghcr.io/sam3797/hello-world:master-${{ github.run_number }}
+        image: ghcr.io/sam3797/hello-world:master-75
         ports:
         - containerPort: 80
       imagePullSecrets:
