--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -90,4 +90,4 @@ jobs:
            #kubectl apply -f eks/ingress.yaml
            chmod 777 eks/test.sh
            cd eks
-           ./test.sh
+           ./test.sh ngnix-deployment-1 ngnix-app-1 my-service
