--- a/eks/service.yaml
+++ b/eks/service.yaml
@@ -11,6 +11,6 @@ spec:
     app: nginx-app
   type: LoadBalancer
   ports:
-  - nodePort: 31000
+          #- nodePort: 31000
     port: 80
     targetPort: 80
