--- a/.github/workflows/sonar.yaml
+++ b/.github/workflows/sonar.yaml
@@ -14,14 +14,15 @@ jobs:
   sonarqube:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 #       with:
 #         # Disabling shallow clone is recommended for improving relevancy of reporting
 #         fetch-depth: 0
-    - name: SonarQube Scan
+      - name: SonarQube Scan
 #       uses: sonarsource/sonarqube-scan-action@master
         uses: sonarsource/sonarcloud-github-action@v1.3
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
+        env:
+         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+         GITHUB_TOKEN: ${{ secrets.GITHUBTOKEN }}
 #       SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
